# chatserver

./: CMakeLists.txt  README.md  make.sh  toolchain.cmake
include/server/: chatserver.hpp  chatservice.hpp  group.hpp  groupuser.hpp  offlinemessagemodel.hpp  public.hpp  user.hpp
include/server/db/: UserModel.hpp  db.hpp
include/server/model/: friendmodel.hpp  groupmodel.hpp  offlinemessagemodel.hpp
sdk_imx6ull/: Makefile
sdk_imx6ull/conf/: imx_linux.dtb  linux_sqx_defconfig  uboot_sqx_defconfig
sdk_imx6ull/images/: load.imx  ubootsrc
sdk_imx6ull/linux-imx/: Makefile
sdk_imx6ull/linux-imx/drivers/gpio/: gpio-mxc.c
sdk_imx6ull/linux-imx/drivers/net/phy/: smsc.c
sdk_imx6ull/nfs/: rootfs.tar.bz2
sdk_imx6ull/nfs/rootfs/etc/: exports  hostname  hosts  shadow  wpa_supplicant.conf
sdk_imx6ull/nfs/rootfs/lib/: libatomic.so.1.2.0  libiw.so.30
sdk_imx6ull/nfs/rootfs/root/: .ash_history
sdk_imx6ull/nfs/rootfs/sbin/: iwconfig
sdk_imx6ull/nfs/rootfs/usr/lib/: libasound.so.2.0.0  libatopology.so.2.0.0  libcjson.so.1.7.15  libform.so.6.1  libjson.so.7.6.1  (+11 more)
sdk_imx6ull/uboot-imx/: Makefile
sdk_imx6ull/uboot-imx/configs/: mx6ull_14x14_evk_emmc_defconfig
sdk_imx6ull/uboot-imx/include/configs/: mx6ullevk.h
sdk_imx6ull/work/: imx6ull-14x14-emmc.dtb  imx6ull-14x14-evk-emmc.dtb  load.imx
src/client/: CMakeLists.txt  main.cpp
src/server/: CMakeLists.txt  UserModel.cpp  chatserver.cpp  chatservice.cpp  groupmodel.cpp  main.cpp  offlinemessagemodel.cpp
src/server/model/: FriendModel.cpp  UserModel.cpp  offlinemessagemodel.cpp
src/server/redis/: redis.cpp
(+20 files in other folders)
